Bug 869432 - [eventsource] readyStage on eventsource:close() returns CONNECTING instead of CLOSED. r=smaug